# httpxfetch

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
httpxfetch/: __init__.py
tests/: test_fetch.py
